# gossip

./: CMakeLists.txt  README.md
admin/: go.mod  main.go
admin/packets/: message.go  peer_record.go
main/: CMakeLists.txt  Kconfig.projbuild  gossip_message.c  gossip_message.h  gossip_peer_record.c  gossip_peer_record.h  gossip_udp_server.c  gossip_udp_server.h  gossip_wifi.c  gossip_wifi.h  main.c
